fixed some alignment for printing

--- a/sites/all/themes/rooms/css/print.css
+++ b/sites/all/themes/rooms/css/print.css
@@ -92,4 +92,5 @@ div .attachment-after{
 
 .week-view table {
   min-height: 600px;
+  width: 100%;
 }
